fix white space on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,11 @@ body
   background-size: cover;
   background-attachment: fixed;
   background-image: url(/images/stars.gif);
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .header{
