--- a/css/projects.css
+++ b/css/projects.css
@@ -4,13 +4,18 @@
     padding: 0;
 }
 
-body
-{ font-family: sans-serif;
+body{
+    font-family: sans-serif;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   background-image: url(/images/4.jpg);
+     width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 
