--- a/css/youqinsuncv.css
+++ b/css/youqinsuncv.css
@@ -9,6 +9,11 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+     width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .header{
